Fix for ecom product list being cut off

--- a/css/widgets-ecom.less
+++ b/css/widgets-ecom.less
@@ -169,6 +169,8 @@
 	padding-top: 1px !important;
 
 	.ecom-productslist-products {
+		margin-left: 0;
+	    	max-width: 100%;
 
 		// ----------------------------------------------------------------------------------------------------------------------
 		// Filter
